// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Time /> create time component 1`] = `
<div
  className="fd-time"
>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase hours"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Hours"
      className="fd-input fd-time__input "
      maxLength="2"
      name="hour"
      onChange={[Function]}
      placeholder="hh"
      type="text"
      value="00"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease hours"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase minutes"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Minutes"
      className="fd-input fd-time__input "
      maxLength="2"
      name="minute"
      onChange={[Function]}
      placeholder="mm"
      type="text"
      value="00"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease minutes"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase seconds"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Seconds"
      className="fd-input fd-time__input "
      maxLength="2"
      name="second"
      onChange={[Function]}
      placeholder="ss"
      type="text"
      value="00"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease seconds"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  
</div>
`;

exports[`<Time /> create time component 2`] = `
<div
  className="fd-time"
>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase hours"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Hours"
      className="fd-input fd-time__input "
      maxLength="2"
      name="hour"
      onChange={[Function]}
      placeholder="hh"
      type="text"
      value="00"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease hours"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase minutes"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Minutes"
      className="fd-input fd-time__input "
      maxLength="2"
      name="minute"
      onChange={[Function]}
      placeholder="mm"
      type="text"
      value="00"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease minutes"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase seconds"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Seconds"
      className="fd-input fd-time__input "
      maxLength="2"
      name="second"
      onChange={[Function]}
      placeholder="ss"
      type="text"
      value="00"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease seconds"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  
</div>
`;

exports[`<Time /> create time component 3`] = `
<div
  className="fd-time"
>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase hours"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Hours"
      className="fd-input fd-time__input "
      maxLength="2"
      name="hour"
      onChange={[Function]}
      placeholder="hh"
      type="text"
      value={22}
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease hours"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase minutes"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Minutes"
      className="fd-input fd-time__input "
      maxLength="2"
      name="minute"
      onChange={[Function]}
      placeholder="mm"
      type="text"
      value={34}
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease minutes"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase seconds"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Seconds"
      className="fd-input fd-time__input "
      maxLength="2"
      name="second"
      onChange={[Function]}
      placeholder="ss"
      type="text"
      value={12}
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease seconds"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  
</div>
`;

exports[`<Time /> create time component 4`] = `
<div
  className="fd-time"
>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase hours"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Hours"
      className="fd-input fd-time__input "
      maxLength="2"
      name="hour"
      onChange={[Function]}
      placeholder="hh"
      type="text"
      value="00"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease hours"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase minutes"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Minutes"
      className="fd-input fd-time__input "
      maxLength="2"
      name="minute"
      onChange={[Function]}
      placeholder="mm"
      type="text"
      value="00"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease minutes"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase seconds"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Seconds"
      className="fd-input fd-time__input "
      maxLength="2"
      name="second"
      onChange={[Function]}
      placeholder="ss"
      type="text"
      value="00"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease seconds"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  
</div>
`;

exports[`<Time /> create time component 5`] = `
<div
  className="fd-time"
>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase hours"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Hours"
      className="fd-input fd-time__input "
      maxLength="2"
      name="hour"
      onChange={[Function]}
      placeholder="hh"
      type="text"
      value="12"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease hours"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase minutes"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Minutes"
      className="fd-input fd-time__input "
      maxLength="2"
      name="minute"
      onChange={[Function]}
      placeholder="mm"
      type="text"
      value="00"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease minutes"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase seconds"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Seconds"
      className="fd-input fd-time__input "
      maxLength="2"
      name="second"
      onChange={[Function]}
      placeholder="ss"
      type="text"
      value="00"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease seconds"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase period"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Period"
      className="fd-input fd-time__input "
      maxLength="2"
      name="meridiem"
      onChange={[Function]}
      type="text"
      value="am"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease period"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`<Time /> create time component 6`] = `
<div
  className="fd-time"
>
  <div
    className="fd-time__item"
  >
    
    <input
      aria-label="Hours"
      className="fd-input fd-time__input "
      maxLength="2"
      name="hour"
      onChange={[Function]}
      placeholder="hh"
      type="text"
      value="12"
    />
    
  </div>
  <div
    className="fd-time__item"
  >
    
    <input
      aria-label="Minutes"
      className="fd-input fd-time__input "
      maxLength="2"
      name="minute"
      onChange={[Function]}
      placeholder="mm"
      type="text"
      value="00"
    />
    
  </div>
  <div
    className="fd-time__item"
  >
    
    <input
      aria-label="Seconds"
      className="fd-input fd-time__input "
      maxLength="2"
      name="second"
      onChange={[Function]}
      placeholder="ss"
      type="text"
      value="00"
    />
    
  </div>
  
</div>
`;

exports[`<Time /> create time component 7`] = `
<div
  className="fd-time"
>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase hours"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Hours"
      className="fd-input fd-time__input "
      maxLength="2"
      name="hour"
      onChange={[Function]}
      placeholder="hh"
      type="text"
      value="12"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease hours"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase minutes"
        className="fd-button--light sap-icon--navigation-up-arrow"
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Minutes"
      className="fd-input fd-time__input "
      maxLength="2"
      name="minute"
      onChange={[Function]}
      placeholder="mm"
      type="text"
      value="00"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease minutes"
        className="fd-button--light sap-icon--navigation-down-arrow"
        onClick={[Function]}
      />
    </div>
  </div>
  
  
</div>
`;

exports[`<Time /> create time component 8`] = `
<div
  className="fd-time"
>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase hours"
        className="fd-button--light sap-icon--navigation-up-arrow is-disabled"
        disabled={true}
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Hours"
      className="fd-input fd-time__input is-disabled"
      maxLength="2"
      name="hour"
      onChange={[Function]}
      placeholder="hh"
      readOnly={true}
      type="text"
      value="12"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease hours"
        className="fd-button--light sap-icon--navigation-down-arrow is-disabled"
        disabled={true}
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase minutes"
        className="fd-button--light sap-icon--navigation-up-arrow is-disabled"
        disabled={true}
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Minutes"
      className="fd-input fd-time__input is-disabled"
      maxLength="2"
      name="minute"
      onChange={[Function]}
      placeholder="mm"
      readOnly={true}
      type="text"
      value="00"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease minutes"
        className="fd-button--light sap-icon--navigation-down-arrow is-disabled"
        disabled={true}
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="fd-time__item"
  >
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Increase seconds"
        className="fd-button--light sap-icon--navigation-up-arrow is-disabled"
        disabled={true}
        onClick={[Function]}
      />
    </div>
    <input
      aria-label="Seconds"
      className="fd-input fd-time__input is-disabled"
      maxLength="2"
      name="second"
      onChange={[Function]}
      placeholder="ss"
      readOnly={true}
      type="text"
      value="00"
    />
    <div
      className="fd-time__control"
    >
      <button
        aria-label="Decrease seconds"
        className="fd-button--light sap-icon--navigation-down-arrow is-disabled"
        disabled={true}
        onClick={[Function]}
      />
    </div>
  </div>
  
</div>
`;
